--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-symbols-react-native/outlined-400": "^1.0.0",
     "expo": "~54.0.25",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "material-symbols-react-native": "^1.0.3",
     "react": "19.1.0",
