--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "material-symbols-react-native": "^1.0.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-svg": "15.12.1"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^5.0.2"
+  }
 }
