--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
+    "clean": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@material-symbols-react-native/outlined-400": "^1.0.0",
+    "babel-preset-expo": "^54.0.7",
     "expo": "~54.0.25",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
