--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,9 @@
             ],
             "@assets/*": [
                 "src/assets/*"
+            ],
+            "@models/*": [
+                "src/models/*"
             ]
         }
     }
