--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,9 @@
             "@shared/*": [
                 "src/shared/*"
             ],
+            "@consts/*": [
+                "src/shared/constants/*"
+            ],
             "@assets/*": [
                 "src/assets/*"
             ],
