--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-symbols-react-native/outlined-400": "^1.0.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "babel-preset-expo": "^54.0.7",
     "expo": "~54.0.25",
     "expo-linear-gradient": "~15.0.7",
