Atualiza a navegação do APP - Adiciona o Stack Navigator para abrir telas em cima de páginas - Adiciona um Context para o ID da página atual, evitando o repasse de "setIndex" - Atualiza alguns pacotes para a versão atual do Expo

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -13,6 +13,9 @@
             ],
             "@models/*": [
                 "src/models/*"
+            ],
+            "@contexts/*": [
+                "src/contexts/*"
             ]
         }
     }
