--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "dependencies": {
     "@material-symbols-react-native/outlined-400": "^1.0.0",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "babel-preset-expo": "^54.0.7",
-    "expo": "~54.0.25",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
+    "babel-preset-expo": "^54.0.9",
+    "expo": "~54.0.30",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-status-bar": "~3.0.9",
     "material-symbols-react-native": "^1.0.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "~5.6.2",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1"
   },
   "private": true,
