Simplifica a lista de rotas - Adiciona uma função que simplifica a adição de rotas na navegação - Adiciona atalho para a pasta "features"

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -16,6 +16,9 @@
             ],
             "@contexts/*": [
                 "src/contexts/*"
+            ],
+            "@feats/*": [
+                "src/features/*"
             ]
         }
     }
